- added yahoo.dk to config.lua
- fixed typos in SERVICE.it.txt and SERVICE.en.txt
- fixed bad stas in tin.lua
- fixed socklen_t undefined bug in Mac OS X 10.2
- fixed an ancient bug in the logger initialization call (syslogmode was one
only with -v and not -w)
- fixed \r and not \r\n in tin.lua
- fixed mail2world url
- restored pthread-win32 since they are not broken
- fixed a bug in gcrypt initialization
- atted to the source tree a recent pthread-win32 release (that seems broken)
- added thread callbacks initialization for gcrypt
- fixed the FreePOPs website link in the Windows start menu shortcut
- freepopsd.vbs: added -update option to run the updater prior to run FreePOPs
26/10/2005 0.0.95
- criticalpath.lua is now an official plugin (thanks russell822)
- fastmail.lua is now an official plugin (thanks russell822)
- removed some ERROR_ABORT from mlex.c
- libero.lua: mlex to identify the message list enhanced again
- yahoo.lua: Needed to deal with some scoping issues with local variables and how it relates to the updater. (russell822)
- yahoo.lua: Fixed the markasunread functionality which wasn't working. (russell822)
- es: *** empty log message *** (lisar314)
- yahoo.lua: Rewrite of the delete functionality (russell822)
- gmail.lua: Reaction to a change by gmail. (russell822)
- es: fixed ending tag typo (alessiofender)
- yahoo.lua: Added support for btinternet and talk21 (russell822)
- es, fr: fix (gareuselesinge)
- fr: changed html entities to corresponding characters (alessiofender)
- yahoo.lua: Fixed emptrytrash and emptybulk (russell822)
- es, fr: added kubuntu links (gareuselesinge)
- es, fr: added sarge link to download-linuxadded frank to aboutremoved "sf has broken statistics" (gareuselesinge)
- es: removed md5sumsfiles from es FAQ (gareuselesinge)
- es, fr: News splitted on more pages (alessiofender)
- mimer now optionally get the text_encoding (default iso-8859-1) so that utf8
webmails can be threated correctly